...
    
    // MARK: - Constants
    private enum Constants {
        static let answerDelay: Double = 1.0
        static let errorTitle = "Ошибка"
        static let retryButtonText = "Попробовать еще раз"
        static let roundFinishedTitle = "Этот раунд окончен!"
        static let playAgainButtonText = "Сыграть ещё раз"
        static let resultPrefix = "Ваш результат: "
        static let gamesCountPrefix = "Количество сыгранных КВИЗОВ: "
        static let recordPrefix = "Рекорд: "
        static let accuracyPrefix = "Средняя точность: "
    }
...
